--- a/locale/nl.po
+++ b/locale/nl.po
@@ -5,181 +5,230 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2013-03-29 12:52+CET\n"
-"PO-Revision-Date: 2013-09-20 19:01+0100\n"
-"Last-Translator: Albert Visser <albert@lemoncurry>\n"
+"POT-Creation-Date: 2014-10-26 12:23+CET\n"
+"PO-Revision-Date: 2014-10-26 13:48+0100\n"
+"Last-Translator: \n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: pygettext.py 1.5\n"
 "X-Generator: Poedit 1.5.4\n"
+"Language: Python\n"
 
-#: notetree_intl.py:29
+#: notetree_qt.py:40
+msgid "b_tag"
+msgstr "&Selecteer trefwoord(en)"
+
+#: notetree_qt.py:42
+msgid "b_untag"
+msgstr "&Deselecteer trefwoord(en)"
+
+#: notetree_qt.py:44
+msgid "b_newtag"
+msgstr "&Nieuw trefwoord"
+
+#: notetree_qt.py:121
 msgid "sleep_message"
 msgstr ""
 "NoteTree gaat nu slapen in de System tray\n"
 "Er komt een icoontje waarop je kunt klikken om hem weer wakker te maken"
 
-#: notetree_intl.py:31
+#: notetree_qt.py:122
 msgid "hide_message"
 msgstr "Deze melding niet meer laten zien"
 
-#: notetree_intl.py:89
-msgid "m_main"
-msgstr "&Main"
-
-#: notetree_intl.py:90
-msgid "h_reload"
-msgstr "notities bestand opnieuw lezen"
-
-#: notetree_intl.py:90
-msgid "m_reload"
-msgstr "&Laden (Ctrl-L)"
-
-#: notetree_intl.py:91
-msgid "h_save"
-msgstr "notities bestand opslaan"
-
-#: notetree_intl.py:91
-msgid "m_save"
-msgstr "Op&slaan (Ctrl-S)"
-
-#: notetree_intl.py:93
-msgid "h_root"
-msgstr "Hoofditem hernoemen"
-
-#: notetree_intl.py:93
-msgid "m_root"
-msgstr "Hoofditem &titel (Shift-F2)"
-
-#: notetree_intl.py:95
-msgid "h_hide"
-msgstr "verbergen in system tray"
-
-#: notetree_intl.py:95
-msgid "m_hide"
-msgstr "&Verberg (Ctrl-H)"
-
-#: notetree_intl.py:96
-msgid "h_lang"
-msgstr "Wijzig de taal van het programma"
-
-#: notetree_intl.py:96
-msgid "m_lang"
-msgstr "T&aal"
-
-#: notetree_intl.py:98
-msgid "h_exit"
-msgstr "programma afsluiten"
-
-#: notetree_intl.py:98
-msgid "m_exit"
-msgstr "e&Xit (Ctrl-Q, Esc)"
-
-#: notetree_intl.py:100
-msgid "m_note"
-msgstr "&Notitie"
-
-#: notetree_intl.py:101
-msgid "h_new"
-msgstr "Notitie toevoegen"
-
-#: notetree_intl.py:101
-msgid "m_new"
-msgstr "&Nieuw (Ctrl-N)"
-
-#: notetree_intl.py:102
-msgid "h_delete"
-msgstr "notitie verwijderen"
-
-#: notetree_intl.py:102
-msgid "m_delete"
-msgstr "Verwij&der (ctrl-D, Del)"
-
-#: notetree_intl.py:103
-msgid "h_name"
-msgstr "Huidige notitie hernoemen"
-
-#: notetree_intl.py:103
-msgid "m_name"
-msgstr "Notitie &titel"
-
-#: notetree_intl.py:105
-msgid "h_forward"
-msgstr "Bekijk volgende notitie"
-
-#: notetree_intl.py:105
-msgid "m_forward"
-msgstr "&Verder"
-
-#: notetree_intl.py:106
-msgid "h_back"
-msgstr "Bekijk vorige notitie"
-
-#: notetree_intl.py:106
-msgid "m_back"
-msgstr "&Terug"
-
-#: notetree_intl.py:108
-msgid "m_help"
-msgstr "&Help"
-
-#: notetree_intl.py:109
-msgid "h_about"
-msgstr "Meer over deze applicatie"
-
-#: notetree_intl.py:109
-msgid "m_about"
-msgstr "&Over"
-
-#: notetree_intl.py:110
-msgid "h_keys"
-msgstr "Handige toetscombinaties"
-
-#: notetree_intl.py:110
-msgid "m_keys"
-msgstr "&Sneltoetsen (F1)"
-
-#: notetree_intl.py:229
-msgid "ask_reload"
-msgstr "OK om ini file opnieuw te laden (wijzigingen gaan verloren)?"
-
-#: notetree_intl.py:253
-msgid "t_root"
-msgstr "Geef nieuwe titel voor het hoofditem:"
-
-#: notetree_intl.py:267
+#: notetree_qt.py:163 notetree_qt.py:394
 msgid "revive_message"
 msgstr "Klik hier om NoteTree te activeren"
 
-#: notetree_intl.py:282
+#: notetree_qt.py:193
+msgid "m_main"
+msgstr "&Main"
+
+#: notetree_qt.py:194
+msgid "h_reload"
+msgstr "Notities bestand opnieuw lezen"
+
+#: notetree_qt.py:194
+msgid "m_reload"
+msgstr "&Laden"
+
+#: notetree_qt.py:195
+msgid "h_save"
+msgstr "Notities bestand opslaan"
+
+#: notetree_qt.py:195
+msgid "m_save"
+msgstr "Op&slaan "
+
+#: notetree_qt.py:197
+msgid "h_root"
+msgstr "Hoofditem hernoemen"
+
+#: notetree_qt.py:197
+msgid "m_root"
+msgstr "&Titel hoofditem"
+
+#: notetree_qt.py:199
+msgid "h_hide"
+msgstr "Verbergen in system tray"
+
+#: notetree_qt.py:199
+msgid "m_hide"
+msgstr "&Verberg "
+
+#: notetree_qt.py:200
+msgid "h_lang"
+msgstr "Wijzig de taal van het programma"
+
+#: notetree_qt.py:200
+msgid "m_lang"
+msgstr "T&aal"
+
+#: notetree_qt.py:202
+msgid "h_exit"
+msgstr "Programma afsluiten"
+
+#: notetree_qt.py:202
+msgid "m_exit"
+msgstr "e&Xit"
+
+#: notetree_qt.py:204
+msgid "m_note"
+msgstr "&Notitie"
+
+#: notetree_qt.py:205
+msgid "h_new"
+msgstr "Notitie toevoegen"
+
+#: notetree_qt.py:205
+msgid "m_new"
+msgstr "&Nieuw "
+
+#: notetree_qt.py:206
+msgid "h_delete"
+msgstr "Notitie verwijderen"
+
+#: notetree_qt.py:206
+msgid "m_delete"
+msgstr "Verwij&der"
+
+#: notetree_qt.py:207
+msgid "h_name"
+msgstr "Huidige notitie hernoemen"
+
+#: notetree_qt.py:207
+msgid "m_name"
+msgstr "Notitie &titel"
+
+#: notetree_qt.py:209
+msgid "h_tags"
+msgstr "Ken trefwoord(en) toe aan deze notitie"
+
+#: notetree_qt.py:209
+msgid "m_tags"
+msgstr "&Trefwoorden"
+
+#: notetree_qt.py:211
+msgid "h_forward"
+msgstr "Bekijk volgende notitie"
+
+#: notetree_qt.py:211
+msgid "m_forward"
+msgstr "&Verder"
+
+#: notetree_qt.py:212
+msgid "h_back"
+msgstr "Bekijk vorige notitie"
+
+#: notetree_qt.py:212
+msgid "m_back"
+msgstr "&Terug"
+
+#: notetree_qt.py:214
+msgid "m_select"
+msgstr "&Selecteren"
+
+#: notetree_qt.py:215
+msgid "m_selall"
+msgstr "&Alles"
+
+#: notetree_qt.py:215 notetree_qt.py:515
+msgid "h_selall"
+msgstr "Laat alle notities zien"
+
+#: notetree_qt.py:216
+msgid "h_seltag"
+msgstr "Laat notities zien met een bepaald trefwoord"
+
+#: notetree_qt.py:216
+msgid "m_seltag"
+msgstr "&Trefwoord"
+
+#: notetree_qt.py:217
+msgid "h_seltxt"
+msgstr "Laat notities zien die een bepaalde tekst bevatten"
+
+#: notetree_qt.py:217
+msgid "m_seltxt"
+msgstr "T&ekst"
+
+#: notetree_qt.py:219
+msgid "m_help"
+msgstr "&Help"
+
+#: notetree_qt.py:220
+msgid "h_about"
+msgstr "Meer over deze applicatie"
+
+#: notetree_qt.py:220
+msgid "m_about"
+msgstr "&Over"
+
+#: notetree_qt.py:221
+msgid "h_keys"
+msgstr "Handige toetscombinaties"
+
+#: notetree_qt.py:221
+msgid "m_keys"
+msgstr "&Sneltoetsen"
+
+#: notetree_qt.py:355
+msgid "ask_reload"
+msgstr "OK om ini file opnieuw te laden (wijzigingen gaan verloren)?"
+
+#: notetree_qt.py:381
+msgid "t_root"
+msgstr "Geef nieuwe titel voor het hoofditem:"
+
+#: notetree_qt.py:408
 msgid "t_new"
 msgstr "Geef een titel op voor het nieuwe item:"
 
-#: notetree_intl.py:303
+#: notetree_qt.py:433
 msgid "no_delete_root"
 msgstr "Hoofditem kan niet verwijderd worden"
 
-#: notetree_intl.py:306
+#: notetree_qt.py:436
 msgid "t_name"
 msgstr "Geef nieuwe titel voor het huidige item:"
 
-#: notetree_intl.py:317
+#: notetree_qt.py:446
 msgid "no_next_item"
 msgstr "Er is geen volgende"
 
-#: notetree_intl.py:324
+#: notetree_qt.py:453
 msgid "no_prev_item"
 msgstr "Er is geen vorige"
 
-#: notetree_intl.py:345
+#: notetree_qt.py:480
 msgid "info_text"
 msgstr ""
 "NoteTree door Albert Visser\n"
 "Electronisch notitieblokje"
 
-#: notetree_intl.py:351
+#: notetree_qt.py:483
 msgid "help_text"
 msgstr ""
 "Ctrl-N                   - nieuwe notitie\n"
@@ -192,7 +241,28 @@ msgstr ""
 "Ctrl-H                   - verbergen in system tray\n"
 "F1                       - deze (help)informatie\n"
 "F2                       - wijzig notitie titel\n"
-"Shift-F2                 - wijzig root titel"
+"Shift-F2                 - wijzig root titel\n"
+"F6                       - trefwoorden toevoegen/verwijderen"
+
+#: notetree_qt.py:493
+msgid "t_lang"
+msgstr "Kies een taal"
+
+#: notetree_qt.py:532
+msgid "i_seltag"
+msgstr "Kies een trefwoord om te zoeken"
+
+#: notetree_qt.py:535
+msgid "s_seltag"
+msgstr "Toon notities met trefwoord `{}`"
+
+#: notetree_qt.py:551
+msgid "i_seltxt"
+msgstr "Geef tekst op om te zoeken"
+
+#: notetree_qt.py:554
+msgid "s_seltxt"
+msgstr "Toon notities met tekst `{}`"
 
 #: notetree_intl.py:360
 msgid "t_en"
@@ -201,7 +271,3 @@ msgstr "Engels"
 #: notetree_intl.py:360
 msgid "t_nl"
 msgstr "Nederlands"
-
-#: notetree_intl.py:362
-msgid "t_lang"
-msgstr "Kies een taal"
