--- a/locale/en.po
+++ b/locale/en.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: NoteTree 2.2\n"
 "POT-Creation-Date: 2017-02-04 15:17+0100\n"
-"PO-Revision-Date: 2017-02-04 16:46+0100\n"
+"PO-Revision-Date: 2017-02-05 11:02+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -267,7 +267,9 @@ msgstr ""
 "F1                       - this (help) info\n"
 "F2                       - edit note title\n"
 "Shift-F2                 - edit root title\n"
-"F6                       - add/remove tags"
+"F6                       - add/remove tags\n"
+"Shift-F6 - manage tags\n"
+"F9 - reverse order"
 
 #: ../notetree/notetree_qt.py:506
 msgid "t_keys"
