--- a/locale/nl.po
+++ b/locale/nl.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: NoteTree 2.2\n"
 "POT-Creation-Date: 2017-02-04 15:18+0100\n"
-"PO-Revision-Date: 2017-02-04 16:48+0100\n"
+"PO-Revision-Date: 2017-02-05 11:03+0100\n"
 "Last-Translator: \n"
 "Language-Team: NL <LL@li.org>\n"
 "Language: nl\n"
@@ -266,7 +266,9 @@ msgstr ""
 "F1                       - deze (help)informatie\n"
 "F2                       - wijzig notitie titel\n"
 "Shift-F2                 - wijzig root titel\n"
-"F6                       - trefwoorden toevoegen/verwijderen"
+"F6                       - trefwoorden toevoegen/verwijderen\n"
+"Shift-F6 - trefwoorden beheren\n"
+"F9 - volgorde omdraaien"
 
 #: ../notetree/notetree_qt.py:506
 msgid "t_keys"
