--- a/locale/en.po
+++ b/locale/en.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: NoteTree 2.2\n"
 "POT-Creation-Date: 2017-02-04 15:17+0100\n"
-"PO-Revision-Date: 2017-02-05 11:02+0100\n"
+"PO-Revision-Date: 2017-02-05 16:23+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -285,7 +285,7 @@ msgstr "Enter tag to search for"
 
 #: ../notetree/notetree_qt.py:559
 msgid "s_seltag"
-msgstr "Show only notes with keyword `{}`"
+msgstr "Show {} notes with keyword `{}`"
 
 #: ../notetree/notetree_qt.py:575
 msgid "i_seltxt"
@@ -293,7 +293,7 @@ msgstr "Enter text to search for"
 
 #: ../notetree/notetree_qt.py:578
 msgid "s_seltxt"
-msgstr "Show only notes containing `{}`"
+msgstr "Show {} notes containing `{}`"
 
 #: ../notetree/notetree_qt.py:
 msgid "m_revorder"
